# mypackage

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
mypackage/: __init__.py  utils.py
mypackage/geometry/: geometry.py
mypackage/tests/: test_geometry.py
