[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypackage"
version = "0.2.0"
description = "My first package"
license = {file = "LICENSE"}
dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = [
  "bumpver==2023.1129",
  "pre-commit==3.5.0",
  "pytest==7.4.3",
  "pytest-cov==2.6.1",
]

[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"mypackage/__init__.py" = [
    '__version__ = "{pep440_version}"',
]
"pyproject.toml" = [
    'version = "{pep440_version}"',
]
